# ToxicityDetection

./: .gitignore  pyproject.toml
notebooks/: create_training_data.ipynb  parse_nottdeuytsch_corpus.ipynb  test.ipynb
notebooks/preprocess_data/: create_training_data.ipynb  create_training_data_v2.ipynb  parse_german_twitter.ipynb  parse_nottdeuytsch_corpus.ipynb  parse_suomi24.ipynb
notebooks/train/: example_train.ipynb
src/: dataloader.py  model.py  trainer.py
src/toxicity_detection/: dataloader.py  model.py  trainer.py
