[project]
name = "toxicity-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyarrow>=18.1.0",
    "datasets>=4.0.0",
    "jupyterlab>=4.5.3",
    "lxml>=6.0.2",
    "matplotlib>=3.10.0",
    "numpy>=2.0.2",
    "pandas>=2.2.2",
    "pyreadr>=0.5.4",
    "rasterio>=1.5.0",
    "scikit-learn>=1.6.1",
    "transformers>=5.0.0",
    "emoji>=2.15.0",
]

[project.optional-dependencies]
cpu = ["torch>=2.9.0"]
cu128 = ["torch>=2.9.0"]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
  ],
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toxicity_detection"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
